# Quantum-Multicast

./: .gitignore  LICENSE  README.md  bi_multi_comparision.py  bipartite.py  butterfly.py  comparision.py  draw_graph.py  logs.txt  model_size_comparision.py  multipartite.py  plot_results.py  pyproject.toml  read_statstics.py  simulate.py  statistics-len:0-2-nodes:2.csv  statistics.csv  statistics.txt
data/: statistics-len:0-10-nodes:2.csv  statistics-len:0-10-nodes:3.csv  statistics-len:0-10-nodes:4.csv  statistics-len:0-10-nodes:5.csv  statistics-len:0-2-nodes:2.csv  statistics-len:0-2-nodes:3.csv  statistics-len:1-1-nodes:1.csv  statistics-len:1-2-nodes:1.csv  statistics-type:bipartite-nodes:1-len:0-6.csv  statistics-type:bipartite-nodes:2-len:0-1.csv  statistics-type:bipartite-nodes:2-len:0-6.csv  statistics-type:bipartite-nodes:3-len:0-6.csv  statistics-type:bipartite-nodes:4-len:0-6.csv  statistics-type:bipartite-nodes:5-len:0-6.csv  statistics-type:bipartite-nodes:6-len:0-6.csv  statistics-type:multipartite-nodes:1-len:0-6.csv  statistics-type:multipartite-nodes:2-len:0-1.csv  statistics-type:multipartite-nodes:2-len:0-6.csv  statistics-type:multipartite-nodes:3-len:0-6.csv  statistics-type:multipartite-nodes:4-len:0-6.csv  statistics-type:multipartite-nodes:5-len:0-6.csv
data/2021-02-07 15:23:24.210193/: statistics-type:multipartite-nodes:1-len:0-6.csv  statistics-type:multipartite-nodes:2-len:0-6.csv  statistics-type:multipartite-nodes:3-len:0-6.csv  statistics-type:multipartite-nodes:4-len:0-6.csv  (+2 more)
multicast/: __init__.py
qmulticast/: __init__.py
(+51 files in other folders)
