[tool.poetry]
name = "quantum-multicast"
version = "0.0.1"
description = "Project to investigate methods of quantum multicast communication."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.1"
pydocstyle = "^5.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
